
* Added ToArnoldConverter::create() factory function.

* Implemented tbb_hasher( const IECore::MurmurHash & ), allowing MurmurHash to be used as a key in tbb::concurrent_hash_map.

* Added IECoreArnold::InstancingConverter class, which can be used to manage a series of conversions from IECore::Primitive to Arnold AtNodes, returning Arnold instances when duplicate geometry is detected.

Bug Fixes :

* Fixed bug in CameraController which could cause crashes for cameras with preexisting transforms, and failure to update transforms correctly after swapping cameras with setCamera().

7.8.0 :

Additions :

* Added an ls() method to IECoreMaya.FnParameterisedHolder, and a _getMayaNodeType() method so it works with derived classes

* Added initial support for mantra.

* Added a new ModelCache class, for reading and writing hierarchical models in a random access fashion, backed by IndexedIO storage. Bounds for every level of the hierarchy are computed automatically during writing. Also added an ABCToMDC op to IECoreAlembic - this allows conversion of Alembic archives to ModelCache format.

Improvements :

* Rewrote CurvesPrimitiveEvaluator::curveLength(), which should now work properly for polylines, return more accurate results for b splines, and not freeze in pathalogical cases

* Added repr() functionality to NullObject and ObjectVector bindings.

* Added CameraController::project() method.

* IECoreArnold::Renderer::shader() now supports the creation of networks of shaders.

7.7.2 :

Bug Fixes :

* Modified behaviour of shouldSave method of ParameterisedHolder, which controls which attributes are saved to file
  - previously:
	* GenericAttributes which would cause crashes skipped
	* everything else forced to always be written
  - now
	* GenericAttributes which would cause crashes skipped
	* attributes in the AttributeNameToParameterMap forced to always be written
    * anything else uses default Maya behaviour ( write only if changed from default )